@@ -21,17 +21,17 @@
 #include <string.h>
 
 /* provide IDL type initializers */
-#define sfidl_pspec_Real(name, nick, blurb, dflt, min, max, step, hints)  \
+#define sfidl_pspec_Real(group, name, nick, blurb, dflt, min, max, step, hints)  \
   sfi_pspec_real (name, nick, blurb, dflt, min, max, step, hints)
-#define sfidl_pspec_BoxedRec(name, nick, blurb, hints, fields)            \
+#define sfidl_pspec_BoxedRec(group, name, nick, blurb, hints, fields)            \
   sfi_pspec_rec (name, nick, blurb, fields, hints)
-#define sfidl_pspec_Choice(name, nick, blurb, default_value, hints, choices) \
+#define sfidl_pspec_Choice(group, name, nick, blurb, default_value, hints, choices) \
   sfi_pspec_choice (name, nick, blurb, default_value, choices, hints)
 
 /* FIXME: small hackery */
-#define sfidl_pspec_Rec(name, nick, blurb, hints)            \
+#define sfidl_pspec_Rec(group, name, nick, blurb, hints)            \
   sfi_pspec_int (name, nick, blurb, 0, 0, 0, 0, hints)
-#define sfidl_pspec_PSpec(name, nick, blurb, hints)            \
+#define sfidl_pspec_PSpec(group, name, nick, blurb, hints)            \
   sfi_pspec_int (name, nick, blurb, 0, 0, 0, 0, hints)
 
 #include "testidl.h"
